# Full-fledged-Chatbot

./: pyproject.toml  run_fastapi.ps1
app/: api.py  config.py  config.yaml  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  pdfs.py
app/auth/: auth_service.py
app/core/: security.py
app/models/: users.py
app/schema/: query_schema.py  users.py
app/services/: database.py  injester.py  pdf_service.py  query_service.py  rag_service.py  rag_user_service.py  users_service.py
app/utils/: web_scrapper.py
