[project]
name = "llm-based-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv",
    "fastapi",
    "jinja2>=3.1.6",
    "langchain-chroma",
    "langchain-community",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-groq",
    "langchain-ollama",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pdfminer-six>=20260107",
    "pydantic",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "unstructured[pdf]>=0.18.27",
    "uvicorn[standard]",
]

[tool.setuptools.packages.find]
exclude = ["Data*"]
